--- a/onbuild/Dockerfile
+++ b/onbuild/Dockerfile
@@ -12,4 +12,4 @@ ONBUILD ADD . /usr/src/app
 RUN apt-get update && apt-get install -y nodejs --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
 EXPOSE 3000
-CMD ["rails", "server"]
+CMD ["padrino", "start"]
